--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -15,6 +15,10 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^3.13.0",
+    "@tiptap/extension-placeholder": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
